addition of userid as param in /logout endpoint and other changes requested for PR
