# src/main/java/ch/uzh/ifi/hase/soprafs21/controller/UsersApi.java
@@ -212,27 +212,26 @@ public interface UsersApi {
 
 
     /**
-     * PUT /users/logout : Log out from account
+     * PUT /users/logout/{userId} : Log out from account
      * A user can log out from his/her account.
      *
-     * @param body Numeric ID of the user (required)
+     * @param userId Numeric ID of the user to logout (required)
      * @return The user logged out (status code 204)
      *         or Invalid Request (status code 400)
      *         or User unauthenticated (status code 401)
      *         or User not permitted (status code 403)
      */
-    @ApiOperation(value = "Log out from account", nickname = "usersLogoutPut", notes = "A user can log out from his/her account.", tags={ "Users", })
+    @ApiOperation(value = "Log out from account", nickname = "usersLogoutUserIdPut", notes = "A user can log out from his/her account.", tags={ "Users", })
     @ApiResponses(value = { 
         @ApiResponse(code = 204, message = "The user logged out"),
         @ApiResponse(code = 400, message = "Invalid Request", response = ErrorResponseDto.class),
         @ApiResponse(code = 401, message = "User unauthenticated"),
         @ApiResponse(code = 403, message = "User not permitted") })
     @PutMapping(
-        value = "/users/logout",
-        produces = { "application/json" },
-        consumes = { "application/json" }
+        value = "/users/logout/{userId}",
+        produces = { "application/json" }
     )
-    default ResponseEntity<Void> usersLogoutPut(@ApiParam(value = "Numeric ID of the user" ,required=true )  @Valid @RequestBody Long body) throws Exception {
+    default ResponseEntity<Void> usersLogoutUserIdPut(@ApiParam(value = "Numeric ID of the user to logout",required=true) @PathVariable("userId") Long userId) throws Exception {
         return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
 
     }
